configs/akuity/guestbook/guestbook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: guestbook
    tier: frontend
