configs/akuity/guestbook/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: 'unproxied.burrell.tech'
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
spec:
  rules:
  - host: guestbook.akuity.burrell.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: http
  tls:
  - hosts:
    - guestbook.akuity.burrell.tech
    secretName: guestbook.akuity.burrell.tech
