configs/akuity/guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt # Generate a letsencrypt cert when cert-manager becomes available
    external-dns.alpha.kubernetes.io/exclude: 'true'
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
spec:
  rules:
  - host: guestbook.k8s.burrell.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-ui
            port:
              name: http
  tls:
  - hosts:
    - guestbook.k8s.burrell.tech
    secretName: guestbook.k8s.burrell.tech
